unpackaged/main/default/objects/Claims_Form__c/Claims_Form__c.object-meta.xml
<CustomObject>
    <label>Claims Form</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Claims Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>