unpackaged/main/default/objects/Claims_Form__c/fields/Acknowledge_Over_Payment_Read_initial__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge_Over_Payment_Read_initial__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledge Over Payment Read (initial)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>