unpackaged/main/default/objects/Claims_Form__c/fields/Address_of_Treatment_2__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Treatment_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address of Treatment #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>