unpackaged/main/default/objects/Claims_Form__c/fields/Approximate_Date_Time_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Date_Time_of_Accident__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approximate Date/Time of Accident</label>
    <type>DateTime</type>
</CustomField>