unpackaged/main/default/objects/Claims_Form__c/fields/Asked_for_Copy_of_Accident_Report_if_Ava__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Copy_of_Accident_Report_if_Ava__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Asked for a copy of accident report if one is available</inlineHelpText>
    <label>Asked for Copy of Accident Report if Avl</label>
    <type>Checkbox</type>
</CustomField>