unpackaged/main/default/objects/Claims_Form__c/fields/Asked_for_Full_List_if_5_Physicians__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Full_List_if_5_Physicians__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked for Full List if  &gt; 5 Physicians</label>
    <type>Checkbox</type>
</CustomField>