unpackaged/main/default/objects/Claims_Form__c/fields/Asked_If_Eligible_For_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>Asked_If_Eligible_For_Other_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked If Eligible For Other Income</label>
    <type>Checkbox</type>
</CustomField>