unpackaged/main/default/objects/Claims_Form__c/fields/Condition_Treated_2__c.field-meta.xml
<CustomField>
    <fullName>Condition_Treated_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition Treated #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>