unpackaged/main/default/objects/Claims_Form__c/fields/Date_of_First_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Treatment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of First Treatment</label>
    <type>Date</type>
</CustomField>