unpackaged/main/default/objects/Claims_Form__c/fields/Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>