unpackaged/main/default/objects/Claims_Form__c/fields/Date_Symptoms_First_Appeared__c.field-meta.xml
<CustomField>
    <fullName>Date_Symptoms_First_Appeared__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Symptoms First Appeared</label>
    <type>Date</type>
</CustomField>