unpackaged/main/default/objects/Claims_Form__c/fields/Date_Treated_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Treated_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Treated #1</label>
    <type>Date</type>
</CustomField>