unpackaged/main/default/objects/Claims_Form__c/fields/Did_Disabling_Accident_Occur_Performing__c.field-meta.xml
<CustomField>
    <fullName>Did_Disabling_Accident_Occur_Performing__c</fullName>
    <description>Did Disabling Accident Occur Performing Duties of Their Job</description>
    <label>DisablingAccidentOccurred DoingJobDuties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_Yes</valueSetName>
    </valueSet>
</CustomField>