unpackaged/main/default/objects/Claims_Form__c/fields/Disability_Caused_by_a_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Disability_Caused_by_a_Third_Party__c</fullName>
    <label>Disability Caused by a Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_Yes</valueSetName>
    </valueSet>
</CustomField>