unpackaged/main/default/objects/Claims_Form__c/fields/Disability_Do_to_Motor_Vehicle_Accident__c.field-meta.xml
<CustomField>
    <fullName>Disability_Do_to_Motor_Vehicle_Accident__c</fullName>
    <label>Disability Due to Motor Vehicle Accident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_Yes</valueSetName>
    </valueSet>
</CustomField>