unpackaged/main/default/objects/Claims_Form__c/fields/Dominate_Hand__c.field-meta.xml
<CustomField>
    <fullName>Dominate_Hand__c</fullName>
    <label>Dominate Hand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>