unpackaged/main/default/objects/Claims_Form__c/fields/Employee_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Employee_Birthdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Birthdate</label>
    <type>Date</type>
</CustomField>