unpackaged/main/default/objects/Claims_Form__c/fields/Employee_Gender__c.field-meta.xml
<CustomField>
    <fullName>Employee_Gender__c</fullName>
    <label>Employee Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>