unpackaged/main/default/objects/Claims_Form__c/fields/Employee_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_First_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name (First, Last)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>