unpackaged/main/default/objects/Claims_Form__c/fields/Employee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employee_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Phone</label>
    <type>Phone</type>
</CustomField>