unpackaged/main/default/objects/Claims_Form__c/fields/Employer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Contact</label>
    <length>80</length>
    <type>Text</type>
</CustomField>