unpackaged/main/default/objects/Claims_Form__c/fields/Employer_Email__c.field-meta.xml
<CustomField>
    <fullName>Employer_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Email</label>
    <type>Email</type>
</CustomField>