unpackaged/main/default/objects/Claims_Form__c/fields/Employer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Phone</label>
    <type>Phone</type>
</CustomField>