unpackaged/main/default/objects/Claims_Form__c/fields/Expected_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Return_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Return Date</label>
    <type>Date</type>
</CustomField>