unpackaged/main/default/objects/Claims_Form__c/fields/Explain_How_it_Occurred_Doing_Job_D__c.field-meta.xml
<CustomField>
    <fullName>Explain_How_it_Occurred_Doing_Job_D__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Explain How it Occurred Doing Job</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>