unpackaged/main/default/objects/Claims_Form__c/fields/Explain_How_Third_Party_Was_the_Cause__c.field-meta.xml
<CustomField>
    <fullName>Explain_How_Third_Party_Was_the_Cause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Explain How Third Party Was the Cause</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>