unpackaged/main/default/objects/Claims_Form__c/fields/First_Full_Day_of_Disability__c.field-meta.xml
<CustomField>
    <fullName>First_Full_Day_of_Disability__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Full Day of Disability</label>
    <type>Date</type>
</CustomField>