unpackaged/main/default/objects/Claims_Form__c/fields/Fraud_Notice_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Notice_Complete__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>[insert state] requires us to notify you of the following fraud statement: [insert applicable state fraud notice].”  CCA must reference applicable state information in Fraud Notice CL-FRAUD (6-16). *FRAUD NOTICE COMPLETED?  (Initial or N/A)</inlineHelpText>
    <label>Fraud Notice Complete</label>
    <length>3</length>
    <type>Text</type>
</CustomField>