unpackaged/main/default/objects/Claims_Form__c/fields/Hospital_Physician_of_First_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Physician_of_First_Treatment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital/Physician of First Treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>