unpackaged/main/default/objects/Claims_Form__c/fields/How_and_Where_the_Accident_Occurred__c.field-meta.xml
<CustomField>
    <fullName>How_and_Where_the_Accident_Occurred__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How and Where the Accident Occurred</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>