unpackaged/main/default/objects/Claims_Form__c/fields/Last_Day_Actively_at_work__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Actively_at_work__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Day Actively at Work</label>
    <type>Date</type>
</CustomField>