unpackaged/main/default/objects/Claims_Form__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>