unpackaged/main/default/objects/Claims_Form__c/fields/Mailing_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>