unpackaged/main/default/objects/Claims_Form__c/fields/Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_State__c</fullName>
    <label>Mailing Address State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>