unpackaged/main/default/objects/Claims_Form__c/fields/Mailing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>