unpackaged/main/default/objects/Claims_Form__c/fields/Mailing_Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Zipcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Address Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>