unpackaged/main/default/objects/Claims_Form__c/fields/Master_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_Name__c</fullName>
    <formula>Case__r.Master_Group__r.Name + &quot; &quot;  + Case__r.MG_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Group Name</label>
    <type>Text</type>
</CustomField>