unpackaged/main/default/objects/Claims_Form__c/fields/Medical_Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Facility Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>