unpackaged/main/default/objects/Claims_Form__c/fields/Medical_Facility_City__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Facility City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>