unpackaged/main/default/objects/Claims_Form__c/fields/Medical_Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Facility Phone</label>
    <type>Phone</type>
</CustomField>