unpackaged/main/default/objects/Claims_Form__c/fields/Medical_Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_State__c</fullName>
    <label>Medical Facility State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>