unpackaged/main/default/objects/Claims_Form__c/fields/Medical_Facility_Zip__c.field-meta.xml
<CustomField>
    <fullName>Medical_Facility_Zip__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Facility Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>