unpackaged/main/default/objects/Claims_Form__c/fields/Month_MM_YY_FirstTreatment_No_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_MM_YY_FirstTreatment_No_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month MM/YYYY First Treatment No Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>