unpackaged/main/default/objects/Claims_Form__c/fields/Month_MM_YYYY_FirstSymptom_No_Exact_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_MM_YYYY_FirstSymptom_No_Exact_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month MM/YYYY FirstSymptom No Exact Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>