unpackaged/main/default/objects/Claims_Form__c/fields/Name_of_Medical_Facility__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Medical_Facility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Medical Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>