unpackaged/main/default/objects/Claims_Form__c/fields/Nature_of_Illness__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Illness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nature of Illness</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>