unpackaged/main/default/objects/Claims_Form__c/fields/Non_Fraud_Notice_State_Script1__c.field-meta.xml
<CustomField>
    <fullName>Non_Fraud_Notice_State_Script1__c</fullName>
    <defaultValue>&quot;Instead of a traditional signature to confirm the information that you provided, we have the capabilities of accepting your verbal acknowledgement.  Do you confirm that you agree to be bound by the accuracy of all of the information you provided regarding &quot; + $RecordType.Name + &quot; Claim&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Fraud Notice State Script</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>