unpackaged/main/default/objects/Claims_Form__c/fields/Non_Fraud_Notice_State_STD_Script__c.field-meta.xml
<CustomField>
    <fullName>Non_Fraud_Notice_State_STD_Script__c</fullName>
    <defaultValue>&quot;Instead of a traditional signature to confirm the information that you provided and your understanding of the overpayment notice, we have the capabilities of accepting your verbal acknowledgement. Do you confirm that you understand the overpayment notice and that you agree to be bound by the accuracy of all of the information you provided regarding Short Term Disability Claim?&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Fraud Notice State STD Script</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>