unpackaged/main/default/objects/Claims_Form__c/fields/Other_Income_Benefit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Benefit_Frequency__c</fullName>
    <label>Other Income Benefit Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency_Weekly_Monthly</valueSetName>
    </valueSet>
</CustomField>