unpackaged/main/default/objects/Claims_Form__c/fields/Other_Income_Benefits_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Benefits_Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Income Benefits Begin Date</label>
    <type>Date</type>
</CustomField>