unpackaged/main/default/objects/Claims_Form__c/fields/Other_Income_Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Date_Applied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Income Date Applied</label>
    <type>Date</type>
</CustomField>