unpackaged/main/default/objects/Claims_Form__c/fields/Other_Income_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Gross_Amount__c</fullName>
    <label>Other Income Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>