unpackaged/main/default/objects/Claims_Form__c/fields/Other_Income_Sources_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Sources_of_Income__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Income Sources of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>