unpackaged/main/default/objects/Claims_Form__c/fields/PA_Residence_Mammogram_Cost__c.field-meta.xml
<CustomField>
    <fullName>PA_Residence_Mammogram_Cost__c</fullName>
    <label>PA Residence Mammogram Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>