unpackaged/main/default/objects/Claims_Form__c/fields/PA_Residence_Pap_Smear_Then_Prep_Cost__c.field-meta.xml
<CustomField>
    <fullName>PA_Residence_Pap_Smear_Then_Prep_Cost__c</fullName>
    <label>PA Residence Pap Smear/Thin Prep Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>