unpackaged/main/default/objects/Claims_Form__c/fields/Patient_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birth_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Birth Date</label>
    <type>Date</type>
</CustomField>