unpackaged/main/default/objects/Claims_Form__c/fields/Patient_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name_First_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Name - First,Last</label>
    <length>60</length>
    <type>Text</type>
</CustomField>