unpackaged/main/default/objects/Claims_Form__c/fields/Performing_Physician_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Performing_Physician_Name_First_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Performing Physician Name - First, Last</label>
    <length>80</length>
    <type>Text</type>
</CustomField>