unpackaged/main/default/objects/Claims_Form__c/fields/Physician_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Physician Name #3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>