unpackaged/main/default/objects/Claims_Form__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy#</label>
    <length>60</length>
    <type>Text</type>
</CustomField>