unpackaged/main/default/objects/Claims_Form__c/fields/Policy_Holder_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Birthdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Holder Birthdate</label>
    <type>Date</type>
</CustomField>