unpackaged/main/default/objects/Claims_Form__c/fields/Policy_Holder_Email__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Holder Email</label>
    <type>Email</type>
</CustomField>