unpackaged/main/default/objects/Claims_Form__c/fields/Policy_Holder_Phone__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Holder Phone</label>
    <type>Phone</type>
</CustomField>