unpackaged/main/default/objects/Claims_Form__c/fields/PolicyHolder_Name_First_Last__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolder_Name_First_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Holder Name-First,Last</label>
    <length>70</length>
    <type>Text</type>
</CustomField>