unpackaged/main/default/objects/Claims_Form__c/fields/Previously_Had_This_or_Similar_Condition__c.field-meta.xml
<CustomField>
    <fullName>Previously_Had_This_or_Similar_Condition__c</fullName>
    <label>Previously Had This or Similar Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_Yes</valueSetName>
    </valueSet>
</CustomField>