unpackaged/main/default/objects/Claims_Form__c/fields/Relationship_to_Patent__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Patent__c</fullName>
    <label>Relationship to Patent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>