unpackaged/main/default/objects/Claims_Form__c/fields/Service_Test_Performed__c.field-meta.xml
<CustomField>
    <fullName>Service_Test_Performed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service/Test Performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>