unpackaged/main/default/objects/Claims_Form__c/fields/Signature_Fraud_Notice_Read__c.field-meta.xml
<CustomField>
    <fullName>Signature_Fraud_Notice_Read__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Instead of a traditional signature to confirm the information that you provided and your understanding of the fraud notice, we have the capabilities of accepting your verbal acknowledgement.  Do you confirm that you understand the fraud notice and that</inlineHelpText>
    <label>Signature/Fraud Notice Read</label>
    <length>3</length>
    <type>Text</type>
</CustomField>