unpackaged/main/default/objects/Claims_Form__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Security</label>
    <length>9</length>
    <type>Text</type>
</CustomField>