unpackaged/main/default/objects/Claims_Form__c/fields/State_Disability_Income_Benefits_Start__c.field-meta.xml
<CustomField>
    <fullName>State_Disability_Income_Benefits_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State Disability Income Benefits Begin Date</inlineHelpText>
    <label>State Disability Income Benefits Start</label>
    <type>Date</type>
</CustomField>