unpackaged/main/default/objects/Claims_Form__c/fields/State_Disability_Income_Date_Applied__c.field-meta.xml
<CustomField>
    <fullName>State_Disability_Income_Date_Applied__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State Disability Income Date Applied</label>
    <type>Date</type>
</CustomField>