unpackaged/main/default/objects/Claims_Form__c/fields/State_Disability_Income_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>State_Disability_Income_Gross_Amount__c</fullName>
    <label>State Disability Income Gross Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>