unpackaged/main/default/objects/Claims_Form__c/fields/Street_Address_If_Different_than_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_If_Different_than_Mailing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Address If Different than Mailing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>