unpackaged/main/default/objects/Claims_Form__c/fields/Treatment_1_MM_YYYY_If_No_Exact_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_1_MM_YYYY_If_No_Exact_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Treatment #1 MM/YYYY (If No Exact Date)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>