unpackaged/main/default/objects/Claims_Form__c/fields/Type_of_Disability__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Disability__c</fullName>
    <label>Type of Disability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Pregnancy</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>FMLA</fullName>
                <isActive>false</isActive>
                <label>FMLA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>