unpackaged/main/default/objects/Claims_Form__c/fields/Unemployment_Benefits_Begin_Date__c.field-meta.xml
<CustomField>
    <fullName>Unemployment_Benefits_Begin_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unemployment Benefits Begin Date</label>
    <type>Date</type>
</CustomField>